@@ -8,6 +8,7 @@ gpdficons_DATA = gpdftext.png gpdftext.xpm
 
 EXTRA_DIST = $(gpdftextdoc_DATA) \
 	$(gpdficons_DATA) \
+	$(PACKAGE).1 \
 	COPYING \
 	po/$(PACKAGE).pot
 	README\
@@ -29,6 +30,14 @@ clean-local: Makefile
 
 debiantarball: Makefile dist
 	ln $(PACKAGE)-$(VERSION).tar.gz $(PACKAGE)_$(VERSION).orig.tar.gz;
+
+DB2MAN = /usr/share/sgml/docbook/stylesheet/xsl/nwalsh/manpages/docbook.xsl
+XP = xsltproc -''-nonet -''-param man.charmap.use.subset "0"
+
+$(PACKAGE).1: manpage.xml
+	$(XP) $(DB2MAN) $<
+
+man_MANS=$(PACKAGE).1
 
 # Remove doc directory on uninstall
 uninstall-local:
