@@ -1,5 +1,11 @@
 2009-10-11  Neil Williams  <linux@codehelp.co.uk>
 
+	* Makefile.am: Add manpage generation upstream.
+	* manpage.xml: Add manpage.
+	* src/Makefile.am: Add -Wl,-z,defs -Wl,--as-needed
+
+2009-10-11  Neil Williams  <linux@codehelp.co.uk>
+
 	* Makefile.am: No need to install doc files.
 	* gpdftext.png (added):
 	* gpdftext.xpm (added):
